== Release 0.3.0 (?) ==

* Android's browser isn't part of the Chromium family
* Drop support for Ruby 1.8

== Release 0.2.3 (July 14, 2012) ==

* Handle exceptions on encoding errors

== Release 0.2.2 (November 1, 2011)  ==

* Detect Firefox on Android (Fennec)

* Bugfix to Parser#version, which could blow up in some cases

* Change Rspec to RSpec (Rspec is being deprecated)

== Release 0.2.1 (September 15, 2011)

* Syntax fixes to YAML data so it loads with Psych (basically Rails 3.1 support)

== Release 0.2.0 (July 30, 2011)

* Seperate code into real modules

* Only load parser and resources by default

* Add subtotals to percentages_for

* Add more data parsing methods to DoubleAgent::Logs::Entry objects

* Various optimizations and stuff I forgot about

== Release 0.1.2 (June 30, 2011)

* Bugfix to #browser_sum and #os_sym returning nil on an empty or nil user agent. Should return :unkown.

== Release 0.1.1 (May 10, 2011)

* #log_entries takes :match and :ignore regexp options

* Added :threshold option to #percentages_for

* Massive performance improvements to log parsing

* Minor performance improvements to user agent parsing

== Release 0.0.3 (May 6, 2011)

* Fixed bug from 0.0.2 in Ruby 1.8 where browser versions never got parsed

== Release 0.0.2 (May 6, 2011)

* Fixed detection for some versions of Windows XP and Opera

* Added detection for Windows 8, Fedora, Slackware, FreeBSD, BlackBerry, Konqueror, Epiphany

* Added parsing tests for each detectable OS and browser

* Misc. minor internal refactoring and bug fixes

== Release 0.0.1 (April 30, 2011) **

* Initial release