@@ -1,6 +1,9 @@
 == Release 0.3.0 (?) ==
 
 * Android's browser isn't part of the Chromium family
+* Android OS isn't part of the GNU/Linux family
+* iOS isn't part of the OS X family
+* Add iPhone and iPad
 * Drop support for Ruby 1.8
 
 == Release 0.2.3 (July 14, 2012) ==
